# drawdesign

./: .env-example  .gitignore  README.md  animals.m4a  audio_recorder.py  drawing_to_website.py  drawing_to_website_edits.py  edits.py  generated_landing_page.html  index.html  main.py  out.html  pyproject.toml  requirements.txt  script.py  skewed_to_website.py  stt.py  unskew.py
static/: index.html
