[project]
name = "drawdesign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "numpy>=2.3.2",
    "openai>=1.106.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "scipy>=1.16.1",
    "sounddevice>=0.5.2",
]
